# FastAPI-Basic-Settings

./: .env  README.md  main.py  manage.py  pyproject.toml  requirements.sh  requirements.txt  settings.py  vercel.json
apps/: __init__.py
apps/example/: models.py  routers.py  schemas.py
database/: db.py  sql_app.db
plugin/: __init__.py  examples.py  execute_models.py  execute_routers.py
plugin/auth/: authorization.py  encrypt.py  models.py  routers.py  schemas.py
plugin/db/: ddl.py  dml.py
